# xianyu_auto_delivery

./: .dockerignore  .env.example  CLAW_CLOUD_DEPLOY.md  Dockerfile  README.md  pyproject.toml
scripts/: xianyu_deliver.py
src/xianyu_auto_delivery/: __init__.py  card_store.py  config.py  delivery_client.py  main.py  models.py  order_provider.py  product_matcher.py  service.py
tests/: test_service.py
